// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`solidselectors 1. solidselectors: 1. solidselectors 1`] = `
"
import { createSelector } from 'pom';
const selector = createSelector({ prefix: 'cool '});

      ↓ ↓ ↓ ↓ ↓ ↓

import { createSelector } from 'pom';
const selector = createSelector({
  prefix: 'cool '
});
"
`;

exports[`solidselectors 2. solidselectors: 2. solidselectors 1`] = `
"
import POM from 'pom';
const selector = POM.createSelector({ prefix: 'cool '});

      ↓ ↓ ↓ ↓ ↓ ↓

import POM from 'pom';
const selector = POM.createSelector({
  prefix: 'cool '
});
"
`;

exports[`solidselectors 3. solidselectors: 3. solidselectors 1`] = `
"
const { createSelector } = require('pom');
const selector = createSelector({ prefix: 'cool '});

      ↓ ↓ ↓ ↓ ↓ ↓

const selector = \\"cool :0\\";
"
`;

exports[`solidselectors 4. solidselectors: 4. solidselectors 1`] = `
"
const POM = require('pom');
const selector = POM.createSelector({ prefix: 'cool '});

      ↓ ↓ ↓ ↓ ↓ ↓

const selector = \\"cool :1\\";
"
`;

exports[`solidselectors 5. solidselectors: 5. solidselectors 1`] = `
"
import POM, { createSelector, somethingElse } from 'pom';
const selector = createSelector({ prefix: 'cool '});
POM.keepsThis();
POM.keepsThat();
somethingElse('stays too');

      ↓ ↓ ↓ ↓ ↓ ↓

import POM, { createSelector, somethingElse } from 'pom';
const selector = createSelector({
  prefix: 'cool '
});
POM.keepsThis();
POM.keepsThat();
somethingElse('stays too');
"
`;

exports[`solidselectors 6. solidselectors: 6. solidselectors 1`] = `
"
const { createSelector, somethingElse } = require('pom');
const selector = createSelector({ prefix: 'cool '});
somethingElse('stays put');

      ↓ ↓ ↓ ↓ ↓ ↓

const {
  somethingElse
} = require('pom');

const selector = \\"cool :2\\";
somethingElse('stays put');
"
`;

exports[`solidselectors 7. solidselectors: 7. solidselectors 1`] = `
"
const { createSelector, somethingElse } = require('pom');
const selector = createSelector({ prefix: 'cool '});
somethingElse('stays put');
somethingElse('stays put');

      ↓ ↓ ↓ ↓ ↓ ↓

const {
  somethingElse
} = require('pom');

const selector = \\"cool :3\\";
somethingElse('stays put');
somethingElse('stays put');
"
`;
